--- a/student/templates/update_student.html
+++ b/student/templates/update_student.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Add Student</h2>
+  <h2>Update Student</h2>
   <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Add Student</button>
+    <button type="submit" class="btn btn-primary">Update Student</button>
     <a class="btn btn-success" href="{% url 'student_list' %}">Home</a>
   </form>
 {% endblock %}
